--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -295,14 +295,15 @@
             align-items: center;
             justify-content: center;
             margin: 40px 0 0 0;
+            overflow: hidden;
             img {
                 border-radius: 1000px;
                 width: 460px;
                 height: 460px;
                 border: 10px solid $white;
                 @media screen and (max-width: $mobile) {
-                    width: calc(50% + 20px);
-                    height: 220px;
+                    width: 210px;
+                    height: 210px;
                     border: 5px solid $white;
                 }
                 &:first-of-type {
